# pqc-assignment-submit

./: .gitignore  .gitmodules  Makefile  PQC-submit.md  README.md  pyproject.toml
bridge/: README.md  oqs_bridge.c
examples/: demo_assignment.txt  pdf_submission_test.py
src/pqc_submit/: __init__.py  cli.py  package.py  utils.py
src/pqc_submit/crypto/: __init__.py  demo_provider.py  oqs_provider.py  provider.py  symmetric.py  wsl_provider.py
tests/: test_submit_flow.py  test_tamper_detection.py  test_wrong_keys.py  test_wsl_provider.py
